[gd_scene load_steps=8 format=2]

[ext_resource path="res://code/tools/gather/Sledge.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/ores/destroy.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sfx/hammer/hit_rock0.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "swing"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 30, 10 ), Vector2( -15, 3.45707e-06 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, -20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, false ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 400.0

[node name="Sledge" type="Node2D" groups=["Sledge"]]
script = ExtResource( 1 )
player_offset = Vector2( 24, -60 )
damage = 500
durability = 50

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3.0
margin_right = 3.0
margin_bottom = 40.0
rect_scale = Vector2( 1, 1.5 )
color = Color( 0.63, 0.328545, 0.00629999, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -16.6667
margin_top = -8.66667
margin_right = 11.3333
margin_bottom = -0.666669
rect_scale = Vector2( 1.2, 1.2 )
color = Color( 0.51, 0.51, 0.51, 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -3 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "swing"
anims/RESET = SubResource( 2 )
anims/swing = SubResource( 3 )

[node name="SoundArea" type="Area2D" parent="."]
scale = Vector2( 2.2, 2.2 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoundArea"]
shape = SubResource( 4 )

[node name="HitRock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 400.0

[node name="Swing" type="AudioStreamPlayer2D" parent="."]

[node name="Destroy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="SoundArea" to="." method="_on_SoundArea_body_entered"]
[connection signal="body_exited" from="SoundArea" to="." method="_on_SoundArea_body_exited"]
